extends Node2D


@onready var win_window: Control = $MailgameUI/WinWindow
@onready var lose_window: Control = $MailgameUI/LoseWindow



# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass



func _exit_tree() -> void:
	pass
